; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/arm/gnu/extr_arm-dis.c_get_map_sym_type.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/arm/gnu/extr_arm-dis.c_get_map_sym_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.disassemble_info = type { %struct.TYPE_2__**, i32* }
%struct.TYPE_2__ = type { i32* }

@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.disassemble_info*, i32, i32*)* @get_map_sym_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_map_sym_type(%struct.disassemble_info* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.disassemble_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.disassemble_info* %0, %struct.disassemble_info** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load %struct.disassemble_info*, %struct.disassemble_info** %5, align 8
  %9 = getelementptr inbounds %struct.disassemble_info, %struct.disassemble_info* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %28

12:                                               ; preds = %3
  %13 = load %struct.disassemble_info*, %struct.disassemble_info** %5, align 8
  %14 = getelementptr inbounds %struct.disassemble_info, %struct.disassemble_info* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = load %struct.disassemble_info*, %struct.disassemble_info** %5, align 8
  %17 = getelementptr inbounds %struct.disassemble_info, %struct.disassemble_info* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %17, align 8
  %19 = load i32, i32* %6, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %18, i64 %20
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = icmp ne i32* %15, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %12
  %27 = load i32, i32* @FALSE, align 4
  store i32 %27, i32* %4, align 4
  br label %33

28:                                               ; preds = %12, %3
  %29 = load %struct.disassemble_info*, %struct.disassemble_info** %5, align 8
  %30 = load i32, i32* %6, align 4
  %31 = load i32*, i32** %7, align 8
  %32 = call i32 @is_mapping_symbol(%struct.disassemble_info* %29, i32 %30, i32* %31)
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %28, %26
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @is_mapping_symbol(%struct.disassemble_info*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
